Team members added

--- a/index.html
+++ b/index.html
@@ -300,24 +300,241 @@
               </div>
             </div>
           </div>
-          <div class="team" data-aos="fade-up" data-aos-delay="100">
-            <div class="team-member" style="background: url(./images/person1.jpg);">
-              <div class="team-member-content">team member</div>
+          <div class="team">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/daniela.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      Daniela é um dos rostos mais recentes da empresa.
+                      Licenciada em Gestão, começou por trabalhar na área da
+                      contabilidade e secretariado. Após ter tido a oportunidade
+                      de trabalhar na Beatriz dos Panos, a Daniela tem-se
+                      revelado uma mais valia na empresa. As suas funções na
+                      empresa prendem-se essencialmente com o atendimento ao
+                      público, zelo, limpeza e organização do espaço comercial.
+                      Nos tempos livres gosta de Ler, viajar e praticar
+                      badminton.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="team-member" style="background: url(./images/person2.jpg);">
-              <div class="team-member-content">team member</div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/ricardo.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      Ricardo está connosco desde 2017. O seu percurso na
+                      Beatriz dos Panos é curioso, pois começou por estagiar no
+                      âmbito de um curso profissional do ensino secundário. É
+                      actualmente um colaborador com polivalência de funções,
+                      centrando-se essencialmente na montagem e colocação de
+                      Calhas, cortinados e rolos. O Ricardo tem como passatempo
+                      preferido o ciclismo.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="team-member" style="background: url(./images/person3.jpg);">
-              <div class="team-member-content">team member</div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/vera.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      Vera Silva trabalhou desde muito cedo e durante quinze
+                      anos no ramo de hotelaria. Posteriormente desempenhou
+                      funções como operadora de máquina. Chegou até nós em 2018
+                      com a vontade e determinação de acrescentar mais valor à
+                      Beatriz dos Panos. As suas funções na empresa prendem-se
+                      sobretudo com o atendimento ao público, zelo, limpeza e
+                      organização do espaço comercial. Mãe de um filho, a Vera
+                      tem como paixão o cinema.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="team-member" style="background: url(./images/person4.jpg);">
-              <div class="team-member-content">team member</div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/paula.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      Paula Silva trabalhou no ramo do estofo e decoração desde
+                      muito cedo e ao longo de catorze anos. Começou por
+                      colaborar com a nossa empresa a partir de casa durante 9
+                      anos, transferindo-se em 2011 para as nossas instalações
+                      comerciais, onde passou a prestar o seu trabalho. A Paula
+                      tem a seu cargo a área do “Corte e Costura”, realizando
+                      também atendimento, entre outras tarefas, maioritariamente
+                      ligadas à decoração de interiores e exteriores. O seu
+                      dinamismo e capacidade de resposta têm constituído uma
+                      mais valia inestimável. Mãe de uma menina a Paula gosta
+                      nos seus tempos livres de caminhar e ouvir música.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="team-member" style="background: url(./images/person5.jpg);">
-              <div class="team-member-content">team member</div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/regina.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      A Regina é licenciada em Engenharia Química pela
+                      Universidade de Coimbra e trabalha na Beatriz dos Panos
+                      desde 2011 desempenhando uma multiplicidade de funções
+                      ligadas à coordenação e assessoria da gerência. É sobrinha
+                      da sócia fundadora, Beatriz Madalena, e prima do gerente,
+                      António Sá. É a nossa “bombeira de serviço” ou “braço
+                      direito“. Para além de auxiliar e representar a gerência
+                      na sua ausência, trata também das encomendas a
+                      fornecedores, gestão das redes sociais e orçamentos, não
+                      deixando de dar uma ajuda, sempre que necessário, no
+                      atendimento ao público. A Regina é sem dúvida um dos
+                      rostos mais importantes da Beatriz dos Panos,
+                      apresentando-se na “linha da frente” junto do cliente. Mãe
+                      de dois filhos, usa os seus tempos livres para viajar,
+                      ouvir música, ver filmes e séries.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="team-member" style="background: url(./images/person6.jpg);">
-              <div class="team-member-content">team member</div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/abilio.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      O Abílio trabalha na Beatriz dos Panos há 20 anos. Cresceu
+                      e tornou-se independente no seio da família da nossa
+                      fundadora, Beatriz Madalena, que o acolheu ainda muito
+                      jovem, pelo que é considerado um colaborador especial.
+                      Conhecido entre nós como “canivete suíço”, é um faz tudo
+                      na empresa. Realiza tarefas de arrumação, tira medidas, dá
+                      ideias e soluções técnicas, monta e coloca calhas,
+                      cortinados e rolos. O Abílio é reconhecido por todos pela
+                      sua capacidade produtiva, competência e profissionalismo.
+                      É pai de um menino e nos tempos livres gosta de ir à sua
+                      terra natal, Veral, concelho de Boticas.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/helena.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      A Helena, irmã do Abílio, é a colaboradora mais antiga da
+                      empresa. São vinte e oito anos dedicados, inicialmente à
+                      família e depois à Beatriz dos Panos. Tal com o seu irmão,
+                      a Helena cresceu e tornou-se independente no seio da
+                      família da fundadora Beatriz Madalena, que a acolheu no
+                      início da adolescência, sendo por isso também considerada
+                      uma colaboradora especial. A sua polivalência e
+                      disponibilidade é muito importante na nossa empresa. As
+                      suas funções centram-se no atendimento, preparação de
+                      cortinados e multitarefas de apoio à gerência. Mãe de dois
+                      filhos, tal como o seu irmão, aproveita, sempre que pode,
+                      para ir até Veral, a sua terra natal.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+              <div class="row">
+                <div class="col-lg-2 mb-5">
+                  <div class="member-img-container">
+                    <img
+                      class="member-img"
+                      src="./images/filipa.jpg"
+                      alt="member"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-9 ml-auto member-info-container">
+                  <div class="member-info">
+                    <p>
+                      Filipa é licenciada em contabilidade e administração pelo
+                      instituto politécnico do Porto. Trabalha na Beatriz dos
+                      Panos há 6 anos. As suas funções na empresa prendem-se
+                      essencialmente com o atendimento ao público, zelo, limpeza
+                      e organização do espaço comercial. Ao longo destes anos a
+                      Filipa tem se revelado uma colaboradora bastante atenta e
+                      dedicada nas funções que exerce, sendo reconhecidamente
+                      uma peça fundamental na nossa loja. Mãe de um menino,
+                      gosta de passar o tempo em família, fazer caminhadas, ler
+                      e ver séries de televisão.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
