--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
       <div
         class="site-blocks-cover overlay"
-        style="background-image: url(images/home.jpg)"
+        style="background-image: url(./assets/images/home.jpg)"
         data-aos="fade"
         id="home-section"
       >
@@ -211,9 +211,9 @@
               data-aos-delay="100"
             >
               <img
-                src="./images/horario.png"
+                class="horario-img"
+                src="./assets/images/horario.jpg"
                 alt="horario"
-                style="max-width: 100%"
               />
             </div>
           </div>
@@ -277,7 +277,11 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img src="images/equipa.jpg" alt="Image" class="img-fluid" />
+              <img
+                src="./assets/images/equipa.jpg"
+                alt="Image"
+                class="img-fluid"
+              />
             </div>
             <div
               class="col-lg-5 ml-auto switch1"
@@ -307,7 +311,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Beatriz.jpg"
+                      src="./assets/images/Beatriz.jpg"
                       alt="member"
                     />
                   </div>
@@ -339,7 +343,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/António.jpg"
+                      src="./assets/images/António.jpg"
                       alt="member"
                     />
                   </div>
@@ -369,7 +373,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Regina.jpg"
+                      src="./assets/images/Regina.jpg"
                       alt="member"
                     />
                   </div>
@@ -401,7 +405,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Helena.jpg"
+                      src="./assets/images/Helena.jpg"
                       alt="member"
                     />
                   </div>
@@ -432,7 +436,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Abílio.jpg"
+                      src="./assets/images/Abílio.jpg"
                       alt="member"
                     />
                   </div>
@@ -463,7 +467,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Filipa.jpg"
+                      src="./assets/images/Filipa.jpg"
                       alt="member"
                     />
                   </div>
@@ -492,7 +496,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Paula.jpg"
+                      src="./assets/images/Paula.jpg"
                       alt="member"
                     />
                   </div>
@@ -522,7 +526,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Carla.jpg"
+                      src="./assets/images/Carla.jpg"
                       alt="member"
                     />
                   </div>
@@ -551,7 +555,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Vera.jpg"
+                      src="./assets/images/Vera.jpg"
                       alt="member"
                     />
                   </div>
@@ -578,7 +582,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Ricardo.jpg"
+                      src="./assets/images/Ricardo.jpg"
                       alt="member"
                     />
                   </div>
@@ -604,7 +608,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Daniela.jpg"
+                      src="./assets/images/Daniela.jpg"
                       alt="member"
                     />
                   </div>
@@ -631,7 +635,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="./images/Cátia.jpg"
+                      src="./assets/images/Cátia.jpg"
                       alt="member"
                     />
                   </div>
@@ -675,27 +679,27 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="images/tecidos_confecao.jpg"
+                  src="./assets/images/tecidos_confecao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/tecidos_decoracao.jpg"
+                  src="./assets/images/tecidos_decoracao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/complementos_confecao.jpg"
+                  src="./assets/images/complementos_confecao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/servicos_confecao.jpg"
+                  src="./assets/images/servicos_confecao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/tecidos_tecnicos.jpg"
+                  src="./assets/images/tecidos_tecnicos.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -819,7 +823,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/tecidos_confecao.jpg"
+                src="./assets/images/tecidos_confecao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -837,7 +841,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/tecidos_decoracao.jpg"
+                src="./assets/images/tecidos_decoracao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -898,7 +902,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/complementos_confecao.jpg"
+                src="./assets/images/complementos_confecao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -916,7 +920,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/servicos_confecao.jpg"
+                src="./assets/images/servicos_confecao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -964,7 +968,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/tecidos_tecnicos.jpg"
+                src="./assets/images/tecidos_tecnicos.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -991,17 +995,17 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="images/artigos_decoracao.jpg"
+                  src="./assets/images/artigos_decoracao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/hotelaria_restauracao.jpg"
+                  src="./assets/images/hotelaria_restauracao.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="images/design_interiores.jpg"
+                  src="./assets/images/design_interiores.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -1096,7 +1100,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/artigos_decoracao.jpg"
+                src="./assets/images/artigos_decoracao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -1114,7 +1118,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/hotelaria_restauracao.jpg"
+                src="./assets/images/hotelaria_restauracao.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -1186,7 +1190,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/design_interiores.jpg"
+                src="./assets/images/design_interiores.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -1235,7 +1239,7 @@
               data-aos-delay="100"
             >
               <img
-                src="images/cortinados-rolos.jpg"
+                src="./assets/images/cortinados-rolos.jpg"
                 alt="Image"
                 class="img-fluid"
               />
@@ -1262,7 +1266,11 @@
             data-aos-delay="100"
           >
             <div id="filters" class="filters text-center button-group col-md-7">
-              <button class="btn btn-primary active" data-filter="*">
+              <button
+                id="allBtn"
+                class="btn btn-primary active"
+                data-filter="*"
+              >
                 Todos
               </button>
               <button class="btn btn-primary" data-filter="*.web">
@@ -1293,7 +1301,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_1.jpg" />
+                <img class="img-fluid" src="./assets/images/img_1.jpg" />
               </a>
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1303,7 +1311,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_2.jpg" />
+                <img class="img-fluid" src="./assets/images/img_2.jpg" />
               </a>
             </div>
 
@@ -1314,7 +1322,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_3.jpg" />
+                <img class="img-fluid" src="./assets/images/img_3.jpg" />
               </a>
             </div>
 
@@ -1325,7 +1333,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_4.jpg" />
+                <img class="img-fluid" src="./assets/images/img_4.jpg" />
               </a>
             </div>
 
@@ -1336,7 +1344,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_5.jpg" />
+                <img class="img-fluid" src="./assets/images/img_5.jpg" />
               </a>
             </div>
 
@@ -1347,7 +1355,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_6.jpg" />
+                <img class="img-fluid" src="./assets/images/img_6.jpg" />
               </a>
             </div>
 
@@ -1358,7 +1366,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_7.jpg" />
+                <img class="img-fluid" src="./assets/images/img_7.jpg" />
               </a>
             </div>
 
@@ -1369,7 +1377,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_8.jpg" />
+                <img class="img-fluid" src="./assets/images/img_8.jpg" />
               </a>
             </div>
 
@@ -1380,7 +1388,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_9.jpg" />
+                <img class="img-fluid" src="./assets/images/img_9.jpg" />
               </a>
             </div>
 
@@ -1391,7 +1399,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_10.jpg" />
+                <img class="img-fluid" src="./assets/images/img_10.jpg" />
               </a>
             </div>
 
@@ -1402,7 +1410,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_11.jpg" />
+                <img class="img-fluid" src="./assets/images/img_11.jpg" />
               </a>
             </div>
 
@@ -1413,7 +1421,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_12.jpg" />
+                <img class="img-fluid" src="./assets/images/img_12.jpg" />
               </a>
             </div>
 
@@ -1424,7 +1432,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/img_13.jpg" />
+                <img class="img-fluid" src="./assets/images/img_13.jpg" />
               </a>
             </div>
 
@@ -1435,7 +1443,10 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/padrao_formal.jpg" />
+                <img
+                  class="img-fluid"
+                  src="./assets/images/padrao_formal.jpg"
+                />
               </a>
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1445,7 +1456,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/abiarte.jpg" />
+                <img class="img-fluid" src="./assets/images/abiarte.jpg" />
               </a>
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1455,7 +1466,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/mota_david.jpg" />
+                <img class="img-fluid" src="./assets/images/mota_david.jpg" />
               </a>
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1465,7 +1476,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/laric.jpg" />
+                <img class="img-fluid" src="./assets/images/laric.jpg" />
               </a>
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1475,7 +1486,10 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/level_fabrics.jpg" />
+                <img
+                  class="img-fluid"
+                  src="./assets/images/level_fabrics.jpg"
+                />
               </a>
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
@@ -1485,7 +1499,7 @@
                 data-fancybox="gallery2"
               >
                 <span class="icon-search2"></span>
-                <img class="img-fluid" src="images/casper2.jpg" />
+                <img class="img-fluid" src="./assets/images/casper2.jpg" />
               </a>
             </div>
           </div>
@@ -1572,11 +1586,16 @@
 
       <div class="arrowScrollUp">
         <div class="arrow">
-          <img class="arrowImg" src="./images/up.svg" alt="" />
+          <img class="arrowImg" src="./assets/SVG/up.svg" alt="" />
         </div>
       </div>
     </div>
     <!-- .site-wrap -->
+    <script>
+      window.onload = function () {
+        document.getElementById("allBtn").click();
+      };
+    </script>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/popper.min.js"></script>
