Image Carousel added to sections

--- a/index.html
+++ b/index.html
@@ -679,27 +679,27 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="./assets/images/tecidos_confecao.jpg"
+                  src="./assets/images/Tecidos Confeção_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/tecidos_decoracao.jpg"
+                  src="./assets/images/Tecidos de Decoração_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/complementos_confecao.jpg"
+                  src="./assets/images/Complementos de Confeção_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/servicos_confecao.jpg"
+                  src="./assets/images/Serviços de Confeção_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/tecidos_tecnicos.jpg"
+                  src="./assets/images/Tecidos Tecnicos_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -822,11 +822,28 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/tecidos_confecao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Tecidos Confeção_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos Confeção_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos Confeção_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos Confeção_04.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -840,11 +857,33 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/tecidos_decoracao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Tecidos de Decoração_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos de Decoração_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos de Decoração_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos de Decoração_04.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos de Decoração_05.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
             <div
               class="col-lg-5 ml-auto switch1"
@@ -901,11 +940,28 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/complementos_confecao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Complementos de Confeção_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Complementos de Confeção_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Complementos de Confeção_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Complementos de Confeção_04.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -919,11 +975,23 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/servicos_confecao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Serviços de Confeção_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Serviços de Confeção_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Serviços de Confeção_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
             <div
               class="col-lg-5 ml-auto switch1"
@@ -967,11 +1035,18 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/tecidos_tecnicos.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Tecidos Tecnicos_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Tecidos Tecnicos_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -995,17 +1070,17 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="./assets/images/artigos_decoracao.jpg"
+                  src="./assets/images/Artigos de Decoração_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/hotelaria_restauracao.jpg"
+                  src="./assets/images/Hotéis_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="./assets/images/design_interiores.jpg"
+                  src="./assets/images/Design de Interiores_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -1099,11 +1174,23 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/artigos_decoracao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Artigos de Decoração_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Artigos de Decoração_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Artigos Decoração_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -1117,11 +1204,28 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/hotelaria_restauracao.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Hotéis_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Hotéis_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Hotéis_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Hotéis_04.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
             <div
               class="col-lg-5 ml-auto switch1"
@@ -1189,11 +1293,23 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/design_interiores.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Design de Interiores_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Design de Interiores_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Design de Interiores_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -1238,11 +1354,28 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <img
-                src="./assets/images/cortinados-rolos.jpg"
-                alt="Image"
-                class="img-fluid"
-              />
+              <div class="owl-carousel slide-one-item">
+                <img
+                  src="./assets/images/Cortinados e Rolos_01.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Cortinados e Rolos_02.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Cortinados e Rolos_03.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+                <img
+                  src="./assets/images/Cortinados e Rolos_04.jpg"
+                  alt="Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
