Portfolio issue fixed

--- a/index.html
+++ b/index.html
@@ -1429,7 +1429,7 @@
           >
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_1.jpg"
+                href="assets/images/img_1.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1439,7 +1439,7 @@
             </div>
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_2.jpg"
+                href="assets/images/img_2.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1450,7 +1450,7 @@
 
             <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_3.jpg"
+                href="assets/images/img_3.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1461,7 +1461,7 @@
 
             <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_4.jpg"
+                href="assets/images/img_4.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1472,7 +1472,7 @@
 
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_5.jpg"
+                href="assets/images/img_5.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1483,7 +1483,7 @@
 
             <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_6.jpg"
+                href="assets/images/img_6.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1494,7 +1494,7 @@
 
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_7.jpg"
+                href="assets/images/img_7.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1505,7 +1505,7 @@
 
             <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_8.jpg"
+                href="assets/images/img_8.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1516,7 +1516,7 @@
 
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_9.jpg"
+                href="assets/images/img_9.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1527,7 +1527,7 @@
 
             <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_10.jpg"
+                href="assets/images/img_10.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1538,7 +1538,7 @@
 
             <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_11.jpg"
+                href="assets/images/img_11.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1549,7 +1549,7 @@
 
             <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_12.jpg"
+                href="assets/images/img_12.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1560,7 +1560,7 @@
 
             <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/img_13.jpg"
+                href="assets/images/img_13.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1571,7 +1571,7 @@
 
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/padrao_formal.jpg"
+                href="assets/images/padrao_formal.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1584,7 +1584,7 @@
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/abiarte.jpg"
+                href="assets/images/abiarte.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1594,7 +1594,7 @@
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/mota_david.jpg"
+                href="assets/images/mota_david.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1604,7 +1604,7 @@
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/laric.jpg"
+                href="assets/images/laric.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1614,7 +1614,7 @@
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/level_fabrics.jpg"
+                href="assets/images/level_fabrics.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
@@ -1627,7 +1627,7 @@
             </div>
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
-                href="images/casper2.jpg"
+                href="assets/images/casper2.jpg"
                 class="item-wrap fancybox"
                 data-fancybox="gallery2"
               >
