--- a/index.html
+++ b/index.html
@@ -1569,6 +1569,39 @@
               </a>
             </div>
 
+            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_14.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_14.jpg" />
+              </a>
+            </div>
+
+            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_15.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_15.jpg" />
+              </a>
+            </div>
+
+            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_16.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_16.jpg" />
+              </a>
+            </div>
+
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/padrao_formal.jpg"
