--- a/index.html
+++ b/index.html
@@ -202,23 +202,21 @@
         </a>
       </div>
 
-      <section class="site-section" id="horario-section">
-        <div class="container">
-          <div class="row mb-5">
-            <div
-              class="col-12 text-center"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <img
-                class="horario-img"
-                src="./assets/images/horario.jpg"
-                alt="horario"
-              />
-            </div>
+      <div id="horario-section" class="container">
+        <div class="row mb-5">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+            <img
+              class="horario-img"
+              src="./assets/images/horario.jpg"
+              alt="horario"
+            />
           </div>
         </div>
-      </section>
+      </div>
 
       <section class="site-section" id="empresa-section">
         <div class="container">
@@ -906,11 +904,6 @@
                   almofadas decorativas, toalhas, lençóis, cortinados, ou ainda
                   sofás.
                 </p>
-                <p>
-                  Para ambientes adequados a cada época do ano e a cada fase da
-                  vida também dispomos de tecidos temáticos infantis ou
-                  natalícios.
-                </p>
               </div>
             </div>
           </div>
@@ -1264,17 +1257,15 @@
                 <h3 class="h3 mb-4 text-black">Design de Interiores</h3>
                 <p>
                   Na Beatriz dos Panos não terá apenas uma equipa técnica apta a
-                  dar-lhe aconselhamento personalizado de decoração.
-                </p>
-                <p>
-                  Dispomos também do serviço de design de interiores para
-                  habitações privadas, hotéis, restaurantes, empresas ou outros
-                  espaços comerciais. Projetamos o seu espaço de acordo com as
-                  suas necessidades e expectativas, estando presentes desde o
+                  dar-lhe aconselhamento personalizado de decoração. Dispomos
+                  também do serviço de design de interiores para habitações
+                  privadas, hotéis, restaurantes, empresas ou outros espaços
+                  comerciais. Projetamos o seu espaço de acordo com as suas
+                  necessidades e expectativas, estando presentes desde o
                   primeiro momento até ao final do projeto, incluindo o serviço
-                  de transporte e entrega / montagem.
+                  de transporte e entrega / montagem. Contacte-nos e peça o seu
+                  orçamento grátis!
                 </p>
-                <p>Contacte-nos e peça o seu orçamento grátis!</p>
                 <p>
                   <b
                     >Parceiros:
@@ -1389,7 +1380,7 @@
               data-aos="fade-up"
               data-aos-delay="100"
             >
-              <h2 class="section-title mb-3">Portfólio</h2>
+              <h2 class="section-title mb-3">O Nosso Trabalho</h2>
             </div>
           </div>
 
@@ -1404,16 +1395,7 @@
                 class="btn btn-primary active"
                 data-filter="*"
               >
-                Todos
-              </button>
-              <button class="btn btn-primary" data-filter="*.web">
-                Tecidos
-              </button>
-              <button class="btn btn-primary" data-filter=".design">
-                Decoração
-              </button>
-              <button class="btn btn-primary" data-filter=".brand">
-                Marca
+                Portfólio
               </button>
               <button class="btn btn-primary" data-filter=".partner">
                 Parceiros
@@ -1427,7 +1409,7 @@
             data-aos="fade-up"
             data-aos-delay="100"
           >
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_1.jpg"
                 class="item-wrap fancybox"
@@ -1437,7 +1419,7 @@
                 <img class="img-fluid" src="./assets/images/img_1.jpg" />
               </a>
             </div>
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_2.jpg"
                 class="item-wrap fancybox"
@@ -1448,7 +1430,7 @@
               </a>
             </div>
 
-            <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_3.jpg"
                 class="item-wrap fancybox"
@@ -1459,7 +1441,7 @@
               </a>
             </div>
 
-            <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_4.jpg"
                 class="item-wrap fancybox"
@@ -1470,7 +1452,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_5.jpg"
                 class="item-wrap fancybox"
@@ -1481,7 +1463,7 @@
               </a>
             </div>
 
-            <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_6.jpg"
                 class="item-wrap fancybox"
@@ -1492,7 +1474,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_7.jpg"
                 class="item-wrap fancybox"
@@ -1503,7 +1485,7 @@
               </a>
             </div>
 
-            <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_8.jpg"
                 class="item-wrap fancybox"
@@ -1514,7 +1496,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_9.jpg"
                 class="item-wrap fancybox"
@@ -1525,7 +1507,7 @@
               </a>
             </div>
 
-            <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_10.jpg"
                 class="item-wrap fancybox"
@@ -1536,7 +1518,7 @@
               </a>
             </div>
 
-            <div class="item brand col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_11.jpg"
                 class="item-wrap fancybox"
@@ -1547,7 +1529,7 @@
               </a>
             </div>
 
-            <div class="item design col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_12.jpg"
                 class="item-wrap fancybox"
@@ -1558,7 +1540,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_13.jpg"
                 class="item-wrap fancybox"
@@ -1569,7 +1551,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_14.jpg"
                 class="item-wrap fancybox"
@@ -1580,7 +1562,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_15.jpg"
                 class="item-wrap fancybox"
@@ -1591,7 +1573,7 @@
               </a>
             </div>
 
-            <div class="item web col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/img_16.jpg"
                 class="item-wrap fancybox"
