--- a/index.html
+++ b/index.html
@@ -1584,6 +1584,237 @@
               </a>
             </div>
 
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_17.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_17.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_18.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_18.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_19.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_19.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_20.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_20.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_21.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_21.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_22.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_22.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_23.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_23.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_24.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_24.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_25.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_25.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_26.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_26.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_27.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_27.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_28.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_28.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_29.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_29.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_30.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_30.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_31.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_31.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_32.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_32.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_33.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_33.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_34.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_34.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_35.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_35.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_36.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_36.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_37.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_37.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_38.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_38.jpg" />
+              </a>
+            </div>
+            <div class="item col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
+              <a
+                href="assets/images/img_39.jpg"
+                class="item-wrap fancybox"
+                data-fancybox="gallery2"
+              >
+                <span class="icon-search2"></span>
+                <img class="img-fluid" src="./assets/images/img_39.jpg" />
+              </a>
+            </div>
+
             <div class="item partner col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
               <a
                 href="assets/images/padrao_formal.jpg"
