--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
       <div
         class="site-blocks-cover overlay"
-        style="background-image: url(./assets/images/home.jpg)"
+        style="background-image: url(/assets/images/home.jpg)"
         data-aos="fade"
         id="home-section"
       >
