images issue fixed

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="/assets/images/António.jpg"
+                      src="/assets/images/Antonio.jpg"
                       alt="member"
                     />
                   </div>
@@ -434,7 +434,7 @@
                   <div class="member-img-container">
                     <img
                       class="member-img"
-                      src="/assets/images/Abílio.jpg"
+                      src="/assets/images/Abilio.jpg"
                       alt="member"
                     />
                   </div>
@@ -622,22 +622,22 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="/assets/images/Tecidos-Confeção_01.jpg"
+                  src="/assets/images/Tecidos-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_01.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Complementos-de-Confeção_01.jpg"
+                  src="/assets/images/Complementos-de-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Serviços-de-Confeção_01.jpg"
+                  src="/assets/images/Servicos-de-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -767,22 +767,22 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Tecidos-Confeção_01.jpg"
+                  src="/assets/images/Tecidos-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-Confeção_02.jpg"
+                  src="/assets/images/Tecidos-Confecao_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-Confeção_03.jpg"
+                  src="/assets/images/Tecidos-Confecao_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-Confeção_04.jpg"
+                  src="/assets/images/Tecidos-Confecao_04.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -802,27 +802,27 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_01.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_02.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_03.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_04.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_04.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Tecidos-de-Decoração_05.jpg"
+                  src="/assets/images/Tecidos-de-Decoracao_05.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -880,22 +880,22 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Complementos-de-Confeção_01.jpg"
+                  src="/assets/images/Complementos-de-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Complementos-de-Confeção_02.jpg"
+                  src="/assets/images/Complementos-de-Confecao_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Complementos-de-Confeção_03.jpg"
+                  src="/assets/images/Complementos-de-Confecao_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Complementos-de-Confeção_04.jpg"
+                  src="/assets/images/Complementos-de-Confecao_04.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -915,17 +915,17 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Serviços-de-Confeção_01.jpg"
+                  src="/assets/images/Servicos-de-Confecao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Serviços-de-Confeção_02.jpg"
+                  src="/assets/images/Servicos-de-Confecao_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Serviços-de-Confeção_03.jpg"
+                  src="/assets/images/Servicos-de-Confecao_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -1008,12 +1008,12 @@
             <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
               <div class="owl-carousel slide-one-item-alt">
                 <img
-                  src="/assets/images/Artigos-de-Decoração_01.jpg"
+                  src="/assets/images/Artigos-de-Decoracao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Hotéis_01.jpg"
+                  src="/assets/images/Hoteis_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -1114,17 +1114,17 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Artigos-de-Decoração_01.jpg"
+                  src="/assets/images/Artigos-de-Decoracao_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Artigos-de-Decoração_02.jpg"
+                  src="/assets/images/Artigos-de-Decoracao_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Artigos-Decoração_03.jpg"
+                  src="/assets/images/Artigos-Decoracao_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
@@ -1144,22 +1144,22 @@
             >
               <div class="owl-carousel slide-one-item">
                 <img
-                  src="/assets/images/Hotéis_01.jpg"
+                  src="/assets/images/Hoteis_01.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Hotéis_02.jpg"
+                  src="/assets/images/Hoteis_02.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Hotéis_03.jpg"
+                  src="/assets/images/Hoteis_03.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
                 <img
-                  src="/assets/images/Hotéis_04.jpg"
+                  src="/assets/images/Hoteis_04.jpg"
                   alt="Image"
                   class="img-fluid"
                 />
